syntax = "proto3";

package availabilitypb;

option go_package="github.com/Dinesh789kumar12/CarApp/definitions-store/availabilitypb";


message AvailabilityRequest {
    Location Source=1;
}

message AvailabilityResponse {
    int32 CarId=1;
    string CarType=2;
    string Location=3;
    int32 Distance=4;
}

message Location {
    int32 latitude=1;
    int32 longitude=2;
}

service AvailabilityService {
    rpc GetAvailability(AvailabilityRequest) returns (stream AvailabilityResponse) {};
}